19-AGIC-Upload-SSLCert-AppGW/kube-manifests/03-Ingress-AppGW-SSL-Cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-selfsigned-appgw-ssl
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "app2sslcert"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: app2.kubeoncloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-nginx-clusterip-service
                port: 
                  number: 80
